<resources>
    <string name="app_name">MathsDemo</string>
    <string name="register">Start</string>
    <string name="user_name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_user_details">Add user details</string>
    <string name="que1">121 Divided by 11 is</string>
    <string name="que1_1">11</string>
    <string name="que1_2">10</string>
    <string name="que1_3">19</string>
    <string name="que1_4">18</string>
    <string name="_que_index">%1$d)</string>
    <string name="_2">2)\t</string>
    <string name="_3">3)\t</string>
    <string name="_4">4)\t</string>
    <string name="_5">5)\t</string>
    <string name="_6">6)\t</string>
    <string name="_7">7)\t</string>
    <string name="_8">8)\t</string>
    <string name="_9">9)\t</string>
    <string name="_10">10)\t</string>
    <string name="_11">11)\t</string>
    <string name="_12">12)\t</string>
    <string name="_13">13)\t</string>
    <string name="_14">14)\t</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="score_5_10">Score: 5/10</string>
    <string name="missing_answer">Missing Answer</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="incorrect_answer">Incorrect Answer</string>
    <string name="username_empty">Enter User Name</string>
    <string name="start_test_again">Start Test Again</string>
    <string name="quit">Quit</string>
    <string name="enter_name">Enter name</string>
</resources>