<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images1"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:text="@string/add_user_details"
        android:textSize="20sp"
        android:gravity="center"
        android:background="?colorPrimary"
        android:textStyle="bold"
        android:textColor="?colorOnPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:visibility="gone"
        android:textColor="?colorPrimary"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/et_username" />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:textSize="16sp"
        android:layout_margin="24dp"
        android:padding="12dp"
        android:background="@drawable/edit_text"
        android:paddingStart="8dp"
        android:textColor="?colorPrimary"
        android:textStyle="bold"
        android:textColorHint="#535151"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_register" />
<Button
    android:id="@+id/btn_register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register"
    android:textAllCaps="false"
    android:textSize="18sp"
    android:textStyle="bold"
    android:textColor="?colorOnPrimary"
    android:backgroundTint="?colorPrimary"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>