<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/images1"
    tools:context=".QuestionActivity">
    <TextView
        android:id="@+id/tv_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="?colorPrimary"
        android:text="1)"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/que1"
        android:textColor="?colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_index"
        app:layout_constraintTop_toTopOf="@+id/tv_index" />
    <RadioGroup
        android:id="@+id/rg_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:id="@+id/rb_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            android:checked="false"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/que1_1"/>
        <RadioButton
            android:id="@+id/rb_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/que1_2"/>
        <RadioButton
            android:id="@+id/rb_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/que1_1"/>
        <RadioButton
            android:id="@+id/rb_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/que1_2"/>
        <RadioButton
            android:id="@+id/rb_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/que1_2"/>

    </RadioGroup>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginBottom="24dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?colorOnPrimary"
        android:backgroundTint="?colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>